# creature-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  a.json  b.json  build.sh  makefile  run.sh  run_client.sh  run_server.sh
assets/: creatures.kra  creatures.png.bak
assets/shader/: blur.frag  blur_h.vert  blur_v.vert
libs/imgui/: CMakeLists.txt  imgui-SFML.cpp  imgui.h  imgui_widgets.cpp
libs/xoshiro/: xoshiro256.h
src/: App.cpp  App.hpp  CMakeLists.txt  main.cpp  main_client.cpp  main_server.cpp
src/client/: CMakeLists.txt  Client.cpp  Client.hpp  imguiStyle.cpp
src/client/core/: CMakeLists.txt  Event.cpp  Event.hpp  GameState.cpp  GameState.hpp  Socket.cpp  Socket.hpp  StateManager.cpp  StateManager.hpp
src/client/edit/: CMakeLists.txt  Edit.cpp  Edit.hpp  render_neural_network.cpp  render_neural_network.hpp  ui_inspect.cpp  ui_inspect.hpp  ui_tool.cpp  ui_tool.hpp
src/client/edit/tool/: CMakeLists.txt  Eraser.cpp  Eraser.hpp  Rect.hpp  Tool.cpp  Tool.hpp  ToolBox.hpp
src/client/edit/tool/effect/: Barrier.cpp  Barrier.hpp  CMakeLists.txt  Effect.hpp  EmptyEntity.cpp  EmptyEntity.hpp  Erase.cpp  Erase.hpp  Inspect.cpp  Inspect.hpp  Petrify.cpp  Petrify.hpp  PlaceEmptyCreature.cpp  PlaceEmptyCreature.hpp  PlaceEntity.cpp  PlaceEntity.hpp  PlaceFood.cpp  PlaceFood.hpp  PlaceFoodSpawner.cpp  PlaceFoodSpawner.hpp
src/client/edit/tool/shape/: CMakeLists.txt  Point.cpp  Point.hpp  Rect.cpp  Rect.hpp  Shape.hpp
src/client/file/: CMakeLists.txt  File.cpp  File.hpp  OpenFile.cpp  OpenFile.hpp  SaveFile.cpp  SaveFile.hpp
src/client/level/: CMakeLists.txt  Ecs.hpp  Edit.cpp  Edit.hpp  Level.cpp  Level.hpp  Position.hpp  Rotation.hpp  Sprite.hpp  Timer.hpp  Transform.hpp  configMenu.cpp  configMenu.hpp  move_randomly.cpp  move_randomly.hpp  render.cpp  render.hpp  render_entity.cpp  render_entity.hpp  render_grid.cpp  render_grid.hpp
src/client/main_menu/: CMakeLists.txt  Main.cpp  Main.hpp  New.cpp  New.hpp  Sub.cpp  Sub.hpp  calc_margin.cpp  calc_margin.hpp  ui.cpp  ui.hpp
src/client/session/: CMakeLists.txt  HostSession.cpp  HostSession.hpp  Session.cpp  Session.hpp  Socket.cpp  Socket.hpp
src/client/start/: CMakeLists.txt  Start.cpp  Start.hpp
src/client/test/: CMakeLists.txt  Test.cpp  Test.hpp
src/client/view/: CMakeLists.txt  Return.cpp  Return.hpp  View.cpp  View.hpp  configMenu.cpp  configMenu.hpp  render.cpp
src/core/: App.cpp  App.hpp  CMakeLists.txt  Ecs.hpp  Event.cpp  GameState.cpp  GameState.hpp  StateManager.cpp
src/core/ecs/: ComponentArray.hpp  ComponentManager.hpp  Ecs.hpp  EntityID.hpp  EntityManager.hpp  Signature.hpp  System.hpp  SystemManager.hpp  index_of.hpp
src/server/: CMakeLists.txt  Ecs.hpp  Evolution.hpp  PheromoneEmitter.hpp  Position.hpp  Sensors.hpp  Server.cpp  Server.hpp  Simulation.cpp  Simulation.hpp  Socket.cpp  Socket.hpp  disperse_pheromones.cpp  disperse_pheromones.hpp  neural_net.hpp  read_sensors.cpp
src/server/component/: Age.hpp  CMakeLists.txt  Edible.hpp  EntitySensor.hpp  Metabolism.cpp  Metabolism.hpp  Movement.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  PheromoneEmitter.hpp  Reproduction.cpp  Reproduction.hpp  Rotation.hpp  Sprite.hpp  Stomach.hpp  Transform.hpp
src/server/senses/: CMakeLists.txt  HungerSensor.cpp  HungerSensor.hpp  MetabolismSensor.cpp  MetabolismSensor.hpp  PheromoneField.cpp  PheromoneField.hpp  PheromoneSensor.cpp  PheromoneSensor.hpp  Sensor.hpp
src/server/system/: CMakeLists.txt  emit_pheromones.cpp  emit_pheromones.hpp  metabolize.cpp  metabolize.hpp  move.cpp  move.hpp  move_randomly.cpp  move_randomly.hpp  read_sensors.cpp  read_sensors.hpp  reproduce.cpp  reproduce.hpp  update_sensors.hpp
src/shared/: CMakeLists.txt  Ecs.hpp  LocalConnection.cpp  LocalConnection.hpp  Message.hpp  comm_protocol.hpp  hex.cpp  hex.hpp
src/shared/imgui/: CMakeLists.txt  imconfig-SFML.h  imconfig.h  imgui-SFML.h  imgui.h  imgui_widgets.cpp
src/sim/: CMakeLists.txt  Ecs.hpp  Simulation.cpp  Simulation.hpp  WorldPreset.hpp  WorldPreset.hxx  create.cpp  create.hpp  disperse_pheromones.cpp  disperse_pheromones.hpp  export.cpp  export.cxx  export.hpp  export.hxx  generate.cpp  generate.hpp  import.cpp  import.hpp
src/sim/component/: Age.hpp  Barrier.hpp  CMakeLists.txt  Edible.hpp  EntitySensor.hpp  FoodSpawn.hxx  Health.hpp  Movement.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  PheromoneEmitter.hpp  Reproduction.cpp  Reproduction.hpp  Sensors.hpp  Sprite.cpp  Sprite.hpp  Stomach.hpp  Transform.hpp
src/sim/senses/: CMakeLists.txt  HungerSensor.cpp  HungerSensor.hpp  PheromoneField.cpp  PheromoneField.hpp  PheromoneSensor.cpp  PheromoneSensor.hpp  Sensor.hpp
src/sim/system/: CMakeLists.txt  check_death.cpp  check_death.hpp  emit_pheromones.cpp  emit_pheromones.hpp  eval_neural_net.cpp  eval_neural_net.hpp  metabolize.cpp  metabolize.hpp  move.cpp  move.hpp  read_sensors.cpp  read_sensors.hpp  reproduce.cpp  reproduce.hpp  share_food.cpp  share_food.hpp  spawn_food.cpp  spawn_food.hpp  update_sensors.hpp
src/test/: CMakeLists.txt  Test.cpp  Test.hpp
