cmake_minimum_required (VERSION 3.13)

add_library(imgui
    imconfig.h
    imconfig-SFML.h
    imgui.cpp
    imgui_draw.cpp
    imgui.h
    imgui_internal.h
    imgui-SFML.cpp
    imgui-SFML_export.h
    imgui-SFML.h
    imgui_tables.cpp
    imgui_widgets.cpp
    imstb_rectpack.h
    imstb_textedit.h
    imstb_truetype.h
)
